opam-version: "1.2"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-vorbis"
build: [
  ["./bootstrap"]
  ["./configure" "--prefix" prefix]
  [make "clean"]
  [make]
]
install: [
  [make "install"]
]
remove: ["ocamlfind" "remove" "vorbis"]
depends: [
  "ocamlfind"
  "ogg"
]
depexts: [
 [["alpine"] ["libvorbis-dev"]]
 [["centos"] ["libvorbis-devel"]]
 [["fedora"] ["libvorbis-devel"]]
 [["opensuse"] ["libvorbis-devel"]]
 [["debian"] ["libvorbis-dev"]]
 [["ubuntu"] ["libvorbis-dev"]]
 [["osx" "homebrew"] ["libvorbis"]]
]
bug-reports: "https://github.com/savonet/ocaml-vorbis/issues"
dev-repo: "https://github.com/savonet/ocaml-vorbis.git"
