opam-version: "2.0"
name: "vorbis"
version: "0.7.2"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-vorbis"
bug-reports: "https://github.com/savonet/ocaml-vorbis/issues"
synopsis: "Bindings to libvorbis"
depends: [
  "ocaml"
  "ocamlfind" {build}
  "ogg"
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
depexts: [
  ["libvorbis-dev"] {os-distribution = "alpine"}
  ["libvorbis-devel"] {os-distribution = "centos"}
  ["libvorbis-devel"] {os-distribution = "fedora"}
  ["libvorbis-devel"] {os-family = "suse"}
  ["pkg-config" "libvorbis-dev"] {os-distribution = "debian"}
  ["pkg-config" "libvorbis-dev"] {os-distribution = "ubuntu"}
  ["libvorbis"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-vorbis.git"
